--- a/HelloWorld_child_war/pom.xml
+++ b/HelloWorld_child_war/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.howtodoinjava</groupId>
-  <artifactId>HelloWorld</artifactId>
+  <artifactId>HelloWorld_war</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>HelloWorld_child_war Maven Webapp</name>
